--- a/back/docker-compose.yml
+++ b/back/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3"
+version: "2"
 
 services:
   app:
@@ -7,4 +7,4 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - .:/usr/src/app
+      - .:/usr/app
